@@ -63,6 +63,13 @@ public class MessageProperties implements Serializable {
 
 	public static final String X_DELAY = "x-delay";
 
+	/**
+	 * The custom header to represent a number of retries a message is republished.
+	 * In case of server-side DLX, this header contains the value of {@code x-death.count} property.
+	 * When republish is done manually, this header has to be incremented by the application.
+	 */
+	public static final String RETRY_COUNT = "retry-count";
+
 	public static final String DEFAULT_CONTENT_TYPE = CONTENT_TYPE_BYTES;
 
 	public static final MessageDeliveryMode DEFAULT_DELIVERY_MODE = MessageDeliveryMode.PERSISTENT;
@@ -130,6 +137,8 @@ public class MessageProperties implements Serializable {
 	private Long receivedDelay;
 
 	private MessageDeliveryMode receivedDeliveryMode;
+
+	private long retryCount;
 
 	private boolean finalRetryForMessageWithNoId;
 
@@ -466,6 +475,33 @@ public class MessageProperties implements Serializable {
 
 		Assert.isTrue(delay <= X_DELAY_MAX, "Delay cannot exceed " + X_DELAY_MAX);
 		this.headers.put(X_DELAY, delay);
+	}
+
+	/**
+	 * The number of retries for this message over broker.
+	 * @return the retry count
+	 * @since 3.2
+	 */
+	public long getRetryCount() {
+		return this.retryCount;
+	}
+
+	/**
+	 * Set a number of retries for this message over broker.
+	 * @param retryCount the retry count.
+	 * @since 3.2
+	 * @see #incrementRetryCount()
+	 */
+	public void setRetryCount(long retryCount) {
+		this.retryCount = retryCount;
+	}
+
+	/**
+	 * Increment a retry count for this message when it is re-published back to the broker.
+	 * @since 3.2
+	 */
+	public void incrementRetryCount() {
+		this.retryCount++;
 	}
 
 	public boolean isFinalRetryForMessageWithNoId() {
